--- a/templates/another.html
+++ b/templates/another.html
@@ -1,1 +1,38 @@
-hello, I am another file!
+<html>
+  <style>
+    body{ 
+      font-size: 15pt;
+      font-family: arial;
+    }
+  </style>
+
+
+<body>
+  <h1>Some fabulous cuisine</h1>
+  <div>{{data}}</div>
+
+  <div>
+    {% for n in data %}
+    <div>{{n}}</div>
+    {% endfor %}
+  </div>
+
+<p><a href="another">Go to the other page</a></p>
+
+<form method="POST" action="/search_item">
+    <p>Our Menus for Today: 
+        Price Range: 
+        <input type="text" name="price_low"> - 
+        <input type="text" name="price_high">
+        <select name = 'cuisine'>
+            <option value="Authentic">Authentic</option>
+            <option value="American Chinese">American Chinese</option>
+        </select>
+        <input type="submit" value="Search">
+    </p>
+</form>
+
+</body>
+
+
+</html>
