--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
 
 
 <body>
-  <h1>Some famous Computer Scientists</h1>
+  <h1>Some fabulous cuisine</h1>
   <div>{{data}}</div>
 
   <div>
@@ -20,7 +20,7 @@
 <p><a href="another">Go to the other page</a></p>
 
 <form method="POST" action="/add">
-<p>Name of new computer scientist: <input type="text" name="name"> <input type="submit" value="Add"></p>
+<p>Our Menus for Today: <input type="text" name="name"> <input type="submit" value="Add"></p>
 </form>
 
 </body>
