--- a/templates/another.html
+++ b/templates/another.html
@@ -22,8 +22,8 @@
 <form method="POST" action="/search_item">
     <p>Our Menus for Today: 
         Price Range: 
-        <input type="text" name="price_low"> - 
-        <input type="text" name="price_high">
+        <input type="text" name="price_low" value="0"> - 
+        <input type="text" name="price_high" value="100000">
         <select name = 'cuisine'>
             <option value="Authentic">Authentic</option>
             <option value="American Chinese">American Chinese</option>
