--- a/templates/index.html
+++ b/templates/index.html
@@ -8,20 +8,13 @@
 
 
 <body>
-  <h1>Some fabulous cuisine</h1>
-  <div>{{data}}</div>
+  <h1>home page</h1>
 
-  <div>
-    {% for n in data %}
-    <div>{{n}}</div>
-    {% endfor %}
-  </div>
 
-<p><a href="another">Go to the other page</a></p>
+<p><a href="discover_food">Discover Food</a></p>
+<p><a href="order_management">Order Management</a></p>
+<p><a href="staff_list">Staff List</a></p>
 
-<form method="POST" action="/add">
-<p>Our Menus for Today: <input type="text" name="name"> <input type="submit" value="Add"></p>
-</form>
 
 </body>
 
