--- a/templates/another.html
+++ b/templates/another.html
@@ -17,7 +17,7 @@
     {% endfor %}
   </div>
 
-<p><a href="another">Go to the other page</a></p>
+  <p><a href="/">Home Page</a></p>
 
 <form method="POST" action="/search_item">
     <p>Our Menus for Today: 
