--- a/templates/staff_list.html
+++ b/templates/staff_list.html
@@ -8,7 +8,7 @@
 
 
 <body>
-  <h1>Order ID: {{order_id}}</h1>
+  <h1>Staff List</h1>
   <!-- <div>{{data}}</div> -->
 
   <div>
@@ -17,9 +17,9 @@
     {% endfor %}
   </div>
 
-  <p><a href="/">Home Page</a></p>
+<p><a href="/">Home Page</a></p>
 
-<form method="POST" action="/add_food">
+<!-- <form method="POST" action="/add_food">
     <p>Add Food 
         <select name="item_id" value="item1">
             {% for item in items %}
@@ -34,7 +34,7 @@
         </select>
         <input type="submit" value="Submit">
     </p>
-</form>
+</form> -->
 
 </body>
 
