--- a/templates/index.html
+++ b/templates/index.html
@@ -14,6 +14,10 @@
 <p><a href="discover_food">Discover Food</a></p>
 <p><a href="order_management">Order Management</a></p>
 <p><a href="staff_list">Staff List</a></p>
+<p><a href="view_customer">View Customer</a></p>
+<p><a href="view_res">Make Reservation</a></p>
+<p><a href="view_staff">View Staff</a></p>
+
 
 
 </body>
