--- a/templates/view_customer.html
+++ b/templates/view_customer.html
@@ -26,7 +26,7 @@
         </tr>
     </thead>
     <tbody>
-        {% for id, name, email, phone in data %}
+        {% for id, name, email, phone, pid in data %}
         <tr>
             <td>{{ id }}</td>
             <td>{{ name }}</td>
